# lab-ui

./: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
lab/: hellow-world.py  lab.py
lab/controllers/: documents.py  openai.py  parameters.py  patient.py
src/: App.css  App.jsx  index.css  main.jsx
src/components/: AttributeLists.jsx  Banner.jsx  Bory.jsx  ContentRouter.jsx  ContentSidebar.jsx  Drawer.jsx  Header.jsx  Loading.jsx  MainContent.jsx  PageContent.jsx  SideContent.jsx  SideContentRouter.jsx  Sidebar.jsx
src/components/content/: DocumentRouter.jsx  DocumentSubmit.jsx  DocumentTable.jsx  ParametersTable.jsx  PatientsTable.jsx
src/components/document/: Drawer.jsx  DrawerConfig.jsx  MainContent.jsx  Table.jsx
src/components/documentView/: Card.jsx  Document.jsx  SideContent.jsx  Table.jsx
src/components/documents/: DocumentData.css  DocumentData.jsx  Drawer.jsx  InspectDocument.jsx  MainContent.jsx  (+4 more)
src/hooks/: useArchives.jsx  useCreateDocument.jsx  useCreateDocumentData.jsx  useCreateOpenAiJson.jsx  useCreateParameter.jsx  useCreatePatient.jsx  useDeleteDocument.jsx  useDeleteParameter.jsx  useDeletePatient.jsx  useDocument.jsx  useDocuments.jsx  useOpenAiJson.jsx  useParameters.jsx  usePatients.jsx  useUpdateDocumentData.jsx  useUpdateOpenAiJson.jsx
src/routes/: Document.jsx  DocumentView.jsx  Param.jsx  Parameter.jsx  Patient.jsx  Review.jsx
src/services/: apiClient.jsx  archiveClient.jsx  documentClient.jsx  documentDataClient.jsx  openAiClient.jsx  parameterClient.jsx  patientClient.jsx
(+38 files in other folders)
